# budgie-wayfire-session

./: README.ini  README.md  meson.build
session/: budgie-desktop-wayfire  budgie-wayfire-wrapper  budgie-wayfire.desktop
session-deprecated-fyi/: BudgieDesktopWayfire.session  budgie-wayfire-wrapper  wayfire.ini
src/: budgie-wayfire.desktop  meson.build  startbudgiewayfire.in  wayfire-bridge  wayfire.ini  wayfire_bridge.py  wf-mag
src/systemd/: wayfire-bridge.service
src/wayfire_bridge/: __init__.py  bridge.py  budgie_wm_actions.py  config_manager.py  keybindings.py  logging_config.py  mappings.py  media_keys.py  transforms.py
